There are two WolfSSL examples. One called "wolf_demo_aes" based on the "periph_aes" example. It has console options to run the Wolf tests and benchmarks ('t' for the WolfSSL Tests and 'b' for the WolfSSL Benchmarks). The other demo is called "wolf_demo_lwip" which includes the LWIP network stack and Ethernet support (originally based on the "lwip_freertos_tcpecho" example). The WolfSSL project is setup as a static library "lib_wolfssl". There is also one for FreeRTOS "lib_freertos" and one for LWIP "lib_lwip". The WolfSSL port for the LPC18XX platform is located in "workspace/lib_wolfssl/lpc_18xx_port.c".

--- a/workspace/wolf_demo_aes/.project
+++ b/workspace/wolf_demo_aes/.project
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>periph_aes</name>
+	<name>wolf_demo_aes</name>
 	<comment></comment>
 	<projects>
 		<project>lpc_chip_18xx</project>
 		<project>lpc_board_nxp_lpcxpresso_1837</project>
+		<project>lib_wolfssl</project>
+		<project>lib_freertos</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
